fix: spacing on hero text image

--- a/src/styles/spacing.css
+++ b/src/styles/spacing.css
@@ -102,11 +102,11 @@
 }
 
 /* Hero Banner */
-.cu-hero-textimage > :not(.not-contained) {
+.cu-hero-textimage + :not(.not-contained) {
   @apply mt-2 md:mt-6;
 }
 
-:not(.not-contained) > .cu-hero-textimage {
+:not(.not-contained) + .cu-hero-textimage {
   @apply mb-8 md:mb-12;
 }
 
